--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-image-fade-in": "^1.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-typewriter-effect": "^1.0.2",
+    "styled-components": "^5.2.1",
+    "use-dencrypt-effect": "^1.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
