--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ramonak/react-progress-bar": "^2.1.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flippy": "^0.1.5",
     "react-image-fade-in": "^1.1.3",
+    "react-responsive-carousel": "^3.2.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-typewriter-effect": "^1.0.2",
+    "react-vertical-timeline-component": "^3.3.3",
     "styled-components": "^5.2.1",
     "use-dencrypt-effect": "^1.0.2",
     "web-vitals": "^1.0.1"
