--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-funds",
   "version": "0.1.0",
+  "homepage": "https://barbosagdev.github.io/barbosagdev-portfolio/",
   "private": true,
   "dependencies": {
     "@ramonak/react-progress-bar": "^2.1.3",
@@ -24,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && cd node_modules && cd .bin && gh-pages -d ../../build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
